<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">>

    <item
        android:id="@+id/chatList"
        android:icon="@drawable/ic_baseline_chat_bubble_24"
        android:title="Chat"
        app:showAsAction="always"/>
    <item
        android:id="@+id/swipeScreen"
        android:icon="@drawable/ic_baseline_emoji_people_24"
        android:title="Swiping"
        app:showAsAction="always" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="Profile"
        app:showAsAction="always" />

</menu>