...
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chat_messages_recycler_view"
        >
        <EditText
            android:id="@+id/chat_edittext"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toTopOf="@+id/chat_input_container"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="What you sayin lol..."
            />
        <Button
            android:id="@+id/chat_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/chat_input_container"
...
